--- a/_config.yml
+++ b/_config.yml
@@ -2,11 +2,11 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: blank # the website title (if blank, full name will be used instead)
-first_name: You
-middle_name: R.
-last_name: Name
-email: you@example.com
+title: Jack Andolina # the website title (if blank, full name will be used instead)
+first_name: Jack
+middle_name: 
+last_name: Andolina
+email: jack.e.andolina@dartmouth.edu
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
